--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -34,7 +34,7 @@ jobs:
         pip install requests
 
     - name: Run script to update README
-      run: python generate_readme.py
+      run: python .github/scripts/generate_readme.py
 
     - name: Commit and Push changes
       run: |
